frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: game-frontend
  labels:
    app: frontend
spec:
  selector:
    label: frontend
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
